[project]
name = "pinpoint-me"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "fastapi[standard] (>=0.128.0,<0.129.0)",
    "pydantic-settings (>=2.13.0,<3.0.0)",
    "supabase (>=2.28.0,<3.0.0)",
    "email-validator (>=2.3.0,<3.0.0)",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "ruff (>=0.15.1,<0.16.0)",
    "black (>=26.1.0,<27.0.0)",
    "mypy (>=1.19.1,<2.0.0)"
]
